# g1

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-nightly.yml  rust-stable.yml  rust.yml
examples/: blobs.rs  example_query.dl  interp.rs  macro.rs  readme.rs
g1-cli/: Cargo.toml
g1-cli/src/: main.rs
g1-common/: Cargo.toml
g1-common/src/: command.rs  lexer.rs  lib.rs  naive_solve.rs  nameless.rs  parser.lalrpop  query.rs  strategies.rs  tests.rs  utils.rs  validate.rs
g1-common/src/lang/: lexer.rs  mod.rs  parser.lalrpop
g1-common/src/proc_macro/: ir.rs  mod.rs  parser.lalrpop  token.rs  validate.rs
g1-common/src/validated/: map_span.rs  mod.rs  pool.rs  validate.rs  visitors.rs
g1-macros/: Cargo.toml
g1-macros/src/: lib.rs
g1-server/: Cargo.toml
g1-server/src/: db.rs
g1-sqlite-connection/: Cargo.toml
g1-sqlite-connection/src/: cmd.rs  lib.rs  run.rs
g1d/: Cargo.toml
g1d/src/: db.rs
src/: lib.rs  utils.rs
