[workspace]
members = [".", "g1-cli", "g1-common", "g1-macros", "g1-sqlite-connection"]

[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "A simple graph store."
documentation = "https://docs.rs/g1"
edition = "2018"
homepage = "https://github.com/remexre/g1"
license = "Apache-2.0/MIT"
name = "g1"
repository = "https://github.com/remexre/g1"
version = "0.1.0-alpha.3"

[dependencies]
g1-common = { path = "g1-common" }
g1-macros = { path = "g1-macros" }
g1-sqlite-connection = { path = "g1-sqlite-connection", optional = true }
lazy_static = "1.4.0"
proc-macro-hack = "0.5.11"

[features]
default = [] # TODO

[dev-dependencies]
anyhow = "1.0.25"
tokio = { version = "0.2.4", features = ["macros"] }
defer = "0.1.0"
