[workspace]
members = [".", "g1-common", "g1-macros"]

[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "A simple graph store."
documentation = "https://docs.rs/g1"
edition = "2018"
homepage = "https://github.com/remexre/g1"
license = "Apache-2.0/MIT"
name = "g1"
repository = "https://github.com/remexre/g1"
version = "0.1.0-alpha.4"

[dependencies]
g1-common = { path = "g1-common", version = "0.1.0-alpha.4" }
g1-macros = { path = "g1-macros", version = "0.1.0-alpha.4" }
proc-macro-hack = "0.5.11"

[dev-dependencies]
pretty_assertions = "0.6.1"
