[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "A command-line interface to the G1 graph store."
edition = "2018"
homepage = "https://github.com/remexre/g1"
license = "Apache-2.0/MIT"
name = "g1-cli"
repository = "https://github.com/remexre/g1"
version = "0.1.0-alpha.3"

[dependencies]
anyhow = "1.0.25"
femme = "1.3.0"
g1-common = { path = "../g1-common" }
linefeed = "0.6.0"
log = "0.4.8"
paw = "1.0.0"
structopt = { version = "0.3.5", features = ["paw"] }
