[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "A command-line interface to the G1 graph store."
edition = "2018"
homepage = "https://github.com/remexre/g1"
license = "Apache-2.0/MIT"
name = "g1-cli"
repository = "https://github.com/remexre/g1"
version = "0.1.0-alpha.3"

[dependencies]
anyhow = "1.0.25"
directories = "2.0.2"
femme = "1.3.0"
futures = "0.3.1"
g1-common = { path = "../g1-common" }
g1-sqlite-connection = { path = "../g1-sqlite-connection" }
linefeed = "0.6.0"
log = "0.4.8"
paw = "1.0.0"
structopt = { version = "0.3.5", features = ["paw"] }
bytes = "0.5.2"

[dependencies.tokio]
version = "0.2.4"
default-features = false
features = ["blocking", "rt-threaded", "sync"]
