[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "Common types and traits between the client and server portion of the G1 graph store."
documentation = "https://docs.rs/g1-common"
edition = "2018"
homepage = "https://github.com/remexre/g1"
license = "Apache-2.0/MIT"
name = "g1-common"
repository = "https://github.com/remexre/g1"
version = "0.1.0-alpha.4"

[dependencies]
async-trait = "0.1.21"
bytes = "0.5.2"
cfg-if = "0.1.10"
derive_more = "0.99.2"
futures = "0.3.1"
lalrpop-util = "0.17.2"
logos = "0.9.7"
mime = "0.3.14"
proc-macro2 = "1.0.6"
quote = "1.0.2"
serde = { version = "1.0.102", features = ["rc"] }
serde_derive = "1.0.103"
static_assertions = "1.1.0"
syn = { version = "1.0.11", features = ["derive", "parsing"] }
tokio = { version = "0.2.4", features = ["fs", "io-util"] }
topological-sort = "0.1.0"
uuid = { version = "0.8.1", features = ["v4"] }

[build-dependencies]
lalrpop = "0.17.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
proptest = "0.9.4"
