[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "Common types and traits between the client and server portion of the G1 graph store."
documentation = "https://docs.rs/g1-common"
edition = "2018"
homepage = "https://github.com/remexre/g1"
license = "Apache-2.0/MIT"
name = "g1-common"
repository = "https://github.com/remexre/g1"
version = "0.1.0-alpha.4"

[dependencies]
derivative = "1.0.3"
derive_more = "0.99.2"
lalrpop-util = "0.17.2"
logos = "0.9.7"
proc-macro2 = "1.0.6"
quote = "1.0.2"
serde = { version = "1.0.102", features = ["derive", "rc"] }
syn = { version = "1.0.11", features = ["derive", "parsing"] }
topological-sort = "0.1.0"

[build-dependencies]
lalrpop = "0.17.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
proptest = "0.9.4"
