[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "G1 proc macros."
documentation = "https://docs.rs/g1-macros"
edition = "2018"
homepage = "https://github.com/remexre/g1"
license = "Apache-2.0/MIT"
name = "g1-macros"
repository = "https://github.com/remexre/g1"
version = "0.1.0-alpha.4"

[lib]
proc-macro = true

[dependencies]
g1-common = { path = "../g1-common", version = "0.1.0-alpha.4" }
proc-macro-hack = "0.5.11"
quote = "1.0.2"
