[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "The server portion of a simple graph store, as a library."
edition = "2018"
name = "g1-server"
version = "0.1.0-alpha.3"

[dependencies]
anyhow = "1.0.25"
log = "0.4.8"
mime = "0.3.14"
rusqlite = "0.20.0"
serde = "1.0.102"
serde_json = "1.0.41"
sha2 = "0.8.0"
tokio = { version = "0.2.2", features = ["sync"] }
uuid = "0.8.1"
