[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "A G1 connection based on an SQLite database, using the FS for blobs."
documentation = "https://docs.rs/g1-sqlite-connection"
edition = "2018"
homepage = "https://github.com/remexre/g1"
license = "Apache-2.0/MIT"
name = "g1-sqlite-connection"
repository = "https://github.com/remexre/g1"
version = "0.1.0-alpha.4"

[dependencies]
async-trait = "0.1.21"
derivative = "1.0.3"
futures = "0.3.1"
g1-common = { path = "../g1-common", version = "0.1.0-alpha.4" }
log = "0.4.8"
rusqlite = "0.20.0"
thiserror = "1.0.9"
uuid = { version = "0.8.1", features = ["v4"] }
sha2 = "0.8.0"
libc = "0.2.66"

[dependencies.tokio]
default-features = false
features = ["blocking", "fs", "io-util", "sync", "rt-threaded"]
version = "0.2.4"
