[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "The server portion of a simple graph store."
edition = "2018"
name = "g1d"
version = "0.1.0"

[dependencies]
anyhow = "1.0.23"
femme = "1.3.0"
log = "0.4.8"
mime = "0.3.14"
paw = "1.0.0"
rusqlite = "0.20.0"
serde = "1.0.102"
serde_json = "1.0.41"
structopt = { version = "0.3.5", features = ["paw"] }
tokio = "=0.2.0-alpha.6"
uuid = "0.8.1"
warp = { git = "https://github.com/seanmonstar/warp", version = "=0.2.0-alpha.0" }
