[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "The server portion of a simple graph store."
edition = "2018"
name = "g1d"
version = "0.1.0-alpha.3"

[dependencies]
anyhow = "1.0.25"
femme = "1.3.0"
paw = "1.0.0"
g1-server = { path = "../g1-server" }
structopt = { version = "0.3.5", features = ["paw"] }
tokio = "0.2.2"
# warp = { git = "https://github.com/seanmonstar/warp", version = "=0.2.0-alpha.0" }
